--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -10,6 +10,15 @@ jobs:
     - name: Code checkout
       uses: actions/checkout@v4
 
+    - name: Containers Docker Compose
+      run: docker compose up -d --build
+      
+    - name: Aguardar inicialização (Sleep)
+      run: sleep 15
+      
+    - name: Mostrar logs do container Backend
+      run: docker compose logs backend
+
     - name: Node.js Configuration
       uses: actions/setup-node@v4
       with:
